<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yasmin_editor</name>
  <version>6.0.0</version>
  <description>Editor for YASMIN (Yet Another State MachINe)</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>yasmin</depend>
  <depend>yasmin_plugins_manager</depend>
  <depend>yasmin_factory</depend>
  <exec_depend>python3-tqdm</exec_depend>
  <!-- PyQt selection by Ubuntu version (threshold: resolute = 26):
       Ubuntu < 26 → python3-pyqt5,  Ubuntu >= 26 → python3-pyqt6
       ROS distro → Ubuntu mapping:
         foxy, galactic           → 22.04 (< 26) → pyqt5
         humble, iron             → 22.04 (< 26) → pyqt5
         jazzy, kilted            → 24.04 (< 26) → pyqt6
         lyrical, rolling         → 26+          → pyqt6  -->
  <exec_depend condition="$ROS_DISTRO == foxy">python3-pyqt5</exec_depend>
  <exec_depend condition="$ROS_DISTRO == galactic">python3-pyqt5</exec_depend>
  <exec_depend condition="$ROS_DISTRO == humble">python3-pyqt5</exec_depend>
  <exec_depend condition="$ROS_DISTRO == iron">python3-pyqt5</exec_depend>
  <exec_depend condition="$ROS_DISTRO == jazzy">python3-pyqt6</exec_depend>
  <exec_depend condition="$ROS_DISTRO == kilted">python3-pyqt6</exec_depend>
  <exec_depend condition="$ROS_DISTRO == lyrical">python3-pyqt6</exec_depend>
  <exec_depend condition="$ROS_DISTRO == rolling">python3-pyqt6</exec_depend>
  <build_depend>ros_environment</build_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
